--- a/pyNN.ipynb
+++ b/pyNN.ipynb
@@ -77,22 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 237,
    "source": [
-    "def forward_propagation(X, parameters):\r\n",
+    "def forward_propagation(X, parameters, activation):\r\n",
     "    cache = {}\r\n",
-    "    \r\n",
-    "    L = int(len(parameters)/2)\r\n",
     "    l = 1\r\n",
+    "    L = int(len(parameters)/2)\r\n",
+    "    \r\n",
     "    cache['Z'+str(1)] = np.dot(parameters['W'+str(1)], X) + parameters['b'+str(1)]\r\n",
-    "    cache['A'+str(1)] = activation_funtion(cache['Z'+str(1)], \"relu\")\r\n",
+    "    cache['A'+str(1)] = activation_funtion(cache['Z'+str(1)], activation[l-1])\r\n",
     "    \r\n",
     "    for l in range(2,L):\r\n",
     "        cache['Z'+str(l)] = np.dot(parameters['W'+str(l)], cache['A'+str(l-1)]) + parameters['b'+str(l)]\r\n",
-    "        cache['A'+str(l)] = activation_funtion(cache['Z'+str(l)], \"relu\")\r\n",
+    "        cache['A'+str(l)] = activation_funtion(cache['Z'+str(l)], activation[l-1])\r\n",
     "    l += 1\r\n",
+    "    \r\n",
     "    cache['Z'+str(l)] = np.dot(parameters['W'+str(l)], cache['A'+str(l-1)]) + parameters['b'+str(l)]\r\n",
-    "    cache['A'+str(l)] = activation_funtion(cache['Z'+str(l)], \"sigmoid\")\r\n",
+    "    cache['A'+str(l)] = activation_funtion(cache['Z'+str(l)], activation[l-1])\r\n",
     "\r\n",
     "    return cache"
    ],
@@ -114,20 +115,14 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "## Test"
-   ],
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 240,
    "source": [
-    "layers_dims = [3,6,2]\r\n",
+    "layers_dims = [3,4,6,2]\r\n",
+    "activation = [\"relu\",\"\",\"sigmoid\"]\r\n",
     "X = np.random.randn(layers_dims[0],1)\r\n",
     "parameters = initialize_parameters(layers_dims)\r\n",
-    "print(forward_propagation(X,parameters))"
+    "print(forward_propagation(X, parameters, activation))"
    ],
    "outputs": [
     {
@@ -135,20 +130,27 @@
      "name": "stdout",
      "text": [
       "activation: relu\n",
+      "activation: linear\n",
       "activation: sigmoid\n",
-      "{'Z1': array([[-0.6960015 ],\n",
-      "       [ 0.34285235],\n",
-      "       [ 0.65396795],\n",
-      "       [-1.00349968],\n",
-      "       [ 0.75938888],\n",
-      "       [-1.34527737]]), 'A1': array([[0.        ],\n",
-      "       [0.34285235],\n",
-      "       [0.65396795],\n",
+      "{'Z1': array([[ 0.25796326],\n",
+      "       [ 1.24826441],\n",
+      "       [-0.349815  ],\n",
+      "       [-0.05080034]]), 'A1': array([[0.25796326],\n",
+      "       [1.24826441],\n",
       "       [0.        ],\n",
-      "       [0.75938888],\n",
-      "       [0.        ]]), 'Z2': array([[-0.04317237],\n",
-      "       [-0.26119785]]), 'A2': array([[-22.66656082],\n",
-      "       [ -3.35025725]])}\n"
+      "       [0.        ]]), 'Z2': array([[-0.8098428 ],\n",
+      "       [-0.65256516],\n",
+      "       [-0.94305309],\n",
+      "       [ 0.89332024],\n",
+      "       [ 0.03343445],\n",
+      "       [-0.84532432]]), 'A2': array([[-0.8098428 ],\n",
+      "       [-0.65256516],\n",
+      "       [-0.94305309],\n",
+      "       [ 0.89332024],\n",
+      "       [ 0.03343445],\n",
+      "       [-0.84532432]]), 'Z3': array([[-1.51513923],\n",
+      "       [ 0.43719079]]), 'A3': array([[-0.28168581],\n",
+      "       [ 2.82364794]])}\n"
      ]
     }
    ],
@@ -156,49 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": null,
    "source": [
-    "layers_dims = [3,7,6,2]\r\n",
-    "X = np.random.randn(layers_dims[0],1)\r\n",
-    "parameters = initialize_parameters(layers_dims)\r\n",
-    "print(forward_propagation(X,parameters))"
+    "def forward_propagation(X, parameters,cache):\r\n",
+    "    \r\n",
+    "    L = int(len(parameters)/2)\r\n",
+    "    l = 1"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "activation: relu\n",
-      "activation: relu\n",
-      "activation: sigmoid\n",
-      "{'Z1': array([[ 2.34963719e-03],\n",
-      "       [-8.59698856e-02],\n",
-      "       [-2.94715085e+00],\n",
-      "       [ 7.78430154e-01],\n",
-      "       [-9.37011002e-01],\n",
-      "       [ 3.64584582e+00],\n",
-      "       [-1.43304979e+00]]), 'A1': array([[2.34963719e-03],\n",
-      "       [0.00000000e+00],\n",
-      "       [0.00000000e+00],\n",
-      "       [7.78430154e-01],\n",
-      "       [0.00000000e+00],\n",
-      "       [3.64584582e+00],\n",
-      "       [0.00000000e+00]]), 'Z2': array([[-1.08089258],\n",
-      "       [ 0.70052242],\n",
-      "       [-1.85219513],\n",
-      "       [-0.01938804],\n",
-      "       [ 0.79238911],\n",
-      "       [ 2.35562045]]), 'A2': array([[0.        ],\n",
-      "       [0.70052242],\n",
-      "       [0.        ],\n",
-      "       [0.        ],\n",
-      "       [0.79238911],\n",
-      "       [2.35562045]]), 'Z3': array([[-1.1590438 ],\n",
-      "       [ 3.39257276]]), 'A3': array([[-0.45727151],\n",
-      "       [ 1.03479184]])}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   }
  ],
