--- a/pyNN.ipynb
+++ b/pyNN.ipynb
@@ -57,9 +57,9 @@
     "x_train = keras.utils.normalize(x_train)\r\n",
     "x_test_norm = keras.utils.normalize(x_test)\r\n",
     "\r\n",
-    "print(\"x_train: \", x_train.shape)\r\n",
+    "print(\"x_train:\", x_train.shape)\r\n",
     "x_train = x_train.reshape(x_train.shape[0], -1).T\r\n",
-    "print(\"x_train flatten: \", x_train.shape)\r\n",
+    "print(\"x_train flatten:\", x_train.shape)\r\n",
     "print(\"y_train:\", y_train.shape)\r\n",
     "y_train = y_train.reshape(y_train.shape[0],1).T\r\n",
     "print(\"y_train:\", y_train.shape)\r\n"
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 257,
    "source": [
     "def activation_funtion(Z, activation):\r\n",
     "    if activation == \"relu\":\r\n",
@@ -142,7 +142,8 @@
     "        return A\r\n",
     "        \r\n",
     "    if activation == \"sigmoid\":\r\n",
-    "        A = 1 / (1-np.exp(-Z) + 1e-32)\r\n",
+    "        epsilon = 1e-5\r\n",
+    "        A = 1 / (1 - np.exp(-Z) + 1e-10)\r\n",
     "        print(\"activation:\", activation)\r\n",
     "        return A\r\n",
     "    \r\n",
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 246,
    "source": [
     "def forward_propagation(X, parameters, activation):\r\n",
     "    cache = {}\r\n",
@@ -174,8 +175,9 @@
     "    l += 1\r\n",
     "    \r\n",
     "    cache['Z'+str(l)] = np.dot(parameters['W'+str(l)], cache['A'+str(l-1)]) + parameters['b'+str(l)]\r\n",
+    "    \r\n",
     "    cache['A'+str(l)] = activation_funtion(cache['Z'+str(l)], activation[l-1])\r\n",
-    "\r\n",
+    "    \r\n",
     "    return cache"
    ],
    "outputs": [],
@@ -190,14 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 255,
    "source": [
     "def compute_cost(AL,Y, loss):\r\n",
     "    m = Y.shape[1]\r\n",
     "    \r\n",
     "    AL = AL.T\r\n",
     "    if loss == \"cross_entropy\":\r\n",
-    "        cost = -(1/m) * np.sum(np.multiply(np.log(AL), Y) + np.multiply(np.log(1-AL), 1-Y))\r\n",
+    "        epsilon = 1e-10\r\n",
+    "        cost = -(1/m) * np.sum(np.multiply(np.log(AL + epsilon), Y) + np.multiply(np.log(1-AL + epsilon), 1-Y))\r\n",
     "        return np.squeeze(cost)\r\n",
     "        "
    ],
@@ -220,20 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "source": [
-    "# X = np.random.randn(layers_dims[0],1)\r\n",
-    "# Y = np.array([[0, 1]])\r\n",
-    "# print(Y.shape)\r\n",
-    "# print(Y)\r\n",
-    "\r\n"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 261,
    "source": [
     "layers_dims = [x_train_flatten.shape[0],32,16,10]\r\n",
     "activation = [\"relu\",\"relu\",\"sigmoid\"]\r\n",
@@ -242,8 +232,12 @@
     "print(y_train.shape)\r\n",
     "\r\n",
     "parameters = initialize_parameters(layers_dims)\r\n",
+    "\r\n",
     "cache = forward_propagation(x_train_flatten, parameters, activation)\r\n",
-    "print(compute_cost(cache['A'+str(len(layers_dims)-1)].T, y_train, loss_funtion))"
+    "\r\n",
+    "cost = compute_cost(cache['A' + str(len(layers_dims)-1)].T, y_train, loss_funtion)\r\n",
+    "\r\n",
+    "print(\"cost:\",cost)"
    ],
    "outputs": [
     {
@@ -254,15 +248,15 @@
       "activation: relu\n",
       "activation: relu\n",
       "activation: sigmoid\n",
-      "nan\n"
+      "cost: nan\n"
      ]
     },
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "<ipython-input-162-b9f35470a574>:6: RuntimeWarning: invalid value encountered in log\n",
-      "  cost = -(1/m) * np.sum(np.multiply(np.log(AL), Y) + np.multiply(np.log(1-AL), 1-Y))\n"
+      "<ipython-input-255-c359c583d073>:7: RuntimeWarning: invalid value encountered in log\n",
+      "  cost = -(1/m) * np.sum(np.multiply(np.log(AL + epsilon), Y) + np.multiply(np.log(1-AL + epsilon), 1-Y))\n"
      ]
     }
    ],
@@ -270,14 +264,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 258,
    "source": [
-    "def back_propagation(X, parameters, cache):\r\n",
-    "    \r\n",
-    "    L = int(len(parameters)/2)\r\n",
-    "    l = 1"
+    "layers_dims = [5,5,2,2]\r\n",
+    "activation = [\"relu\",\"relu\",\"sigmoid\"]\r\n",
+    "loss_funtion = \"cross_entropy\"\r\n",
+    "\r\n",
+    "X = np.random.randn(layers_dims[0],1) * 10\r\n",
+    "Y = np.array([[0, 1]])\r\n",
+    "\r\n",
+    "parameters = initialize_parameters(layers_dims)\r\n",
+    "\r\n",
+    "cache = forward_propagation(X, parameters, activation)\r\n",
+    "\r\n",
+    "print(\"Y:\", Y.shape)\r\n",
+    "print(\"Y:\", Y)\r\n",
+    "print(\"X:\", X.shape)\r\n",
+    "print(\"X:\", X)\r\n",
+    "print(\"Z3:\", cache['Z' + str(len(layers_dims)-1)].shape)\r\n",
+    "print(\"Z3:\", cache['Z' + str(len(layers_dims)-1)])\r\n",
+    "print(\"A3:\", cache['A' + str(len(layers_dims)-1)].shape)\r\n",
+    "print(\"A3:\", cache['A' + str(len(layers_dims)-1)])\r\n",
+    "\r\n",
+    "\r\n",
+    "cost = compute_cost(cache['A' + str(len(layers_dims)-1)].T, Y, loss_funtion)\r\n",
+    "\r\n",
+    "print(\"cost:\",cost)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "activation: relu\n",
+      "activation: relu\n",
+      "activation: sigmoid\n",
+      "Y: (1, 2)\n",
+      "Y: [[0 1]]\n",
+      "X: (5, 1)\n",
+      "X: [[ 8.67950476]\n",
+      " [ 8.2104898 ]\n",
+      " [-3.62651062]\n",
+      " [ 4.91931421]\n",
+      " [23.15628315]]\n",
+      "Z3: (2, 1)\n",
+      "Z3: [[-0.90320668]\n",
+      " [-1.27244438]]\n",
+      "A3: (2, 1)\n",
+      "A3: [[-0.68142965]\n",
+      " [-0.38917058]]\n",
+      "cost: nan\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<ipython-input-255-c359c583d073>:7: RuntimeWarning: invalid value encountered in log\n",
+      "  cost = -(1/m) * np.sum(np.multiply(np.log(AL + epsilon), Y) + np.multiply(np.log(1-AL + epsilon), 1-Y))\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
