--- a/pyNN.ipynb
+++ b/pyNN.ipynb
@@ -55,10 +55,11 @@
    "execution_count": 494,
    "source": [
     "print(\"x_train:\", x_train.shape)\r\n",
-    "x_train = x_train.reshape(x_train.shape[0], -1).T\r\n",
+    "x_train = x_train.reshape(x_train.shape[0], -1).T # flatten\r\n",
     "print(\"x_train flatten:\", x_train.shape)\r\n",
+    "\r\n",
     "print(\"y_train:\", y_train.shape)\r\n",
-    "y_train = y_train.reshape(y_train.shape[0],1).T\r\n",
+    "y_train = y_train.reshape(y_train.shape[0],1).T # reshape\r\n",
     "print(\"y_train:\", y_train.shape)"
    ],
    "outputs": [
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 574,
    "source": [
     "def back_propagation(X, Y, parameters, cache, activation):\r\n",
     "    grads = {}\r\n",
@@ -257,12 +258,12 @@
     "    \r\n",
     "    for l in range(L-1,1,-1):\r\n",
     "        grads[\"dZ\" + str(l)] = np.multiply(np.dot(parameters[\"W\" + str(l+1)].T, grads[\"dZ\" + str(l+1)]), activation_derivative(cache[\"Z\" + str(l)],activation[l-1]))        \r\n",
-    "        grads[\"dW\" + str(l)] = (1/m) * np.dot(cache['A' + str(l-1)], grads[\"dZ\" + str(l)].T)\r\n",
+    "        grads[\"dW\" + str(l)] = (1/m) * np.dot(grads[\"dZ\" + str(l)], cache['A' + str(l-1)].T)\r\n",
     "        grads[\"db\" + str(l)] = (1/m) * np.sum(grads[\"dZ\" + str(l)], axis= 1, keepdims= True)\r\n",
     "    l -= 1\r\n",
     "    \r\n",
     "    grads[\"dZ\" + str(l)] = np.multiply(np.dot(parameters[\"W\" + str(l+1)].T, grads[\"dZ\" + str(l+1)]), activation_derivative(cache[\"Z\" + str(l)],activation[l-1]))\r\n",
-    "    grads[\"dW\" + str(l)] = (1/m) * np.dot(cache['A' + str(l-1)], grads[\"dZ\" + str(l)].T)\r\n",
+    "    grads[\"dW\" + str(l)] = (1/m) * np.dot(grads[\"dZ\" + str(l)], cache['A' + str(l-1)].T)\r\n",
     "    grads[\"db\" + str(l)] = (1/m) * np.sum(grads[\"dZ\" + str(l)], axis= 1, keepdims= True)\r\n",
     "    \r\n",
     "    return grads"
@@ -271,33 +272,60 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 528,
+   "cell_type": "markdown",
    "source": [
-    "layers_dims = [x_train_flatten.shape[0],32,16,10]\r\n",
+    "## update_parameters"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 575,
+   "source": [
+    "def update_parameters(grads, paramaters, lr=0.01):\r\n",
+    "    \r\n",
+    "    L = len(parameters) // 2\r\n",
+    "    \r\n",
+    "    for l in range(1, L+1):\r\n",
+    "        print(parameters['W'+str(l)])\r\n",
+    "        print(grads['dW'+str(l)])\r\n",
+    "        parameters['W'+str(l)] = parameters['W'+str(l)] - np.multiply(grads['dW'+str(l)], lr)\r\n",
+    "        parameters['b'+str(l)] = parameters['b'+str(l)] - np.multiply(grads['db'+str(l)], lr)\r\n",
+    "    \r\n",
+    "    return parameters"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 576,
+   "source": [
+    "layers_dims = [x_train.shape[0],32,16,10]\r\n",
     "activation = [\"relu\",\"relu\",\"sigmoid\"]\r\n",
     "loss_funtion = \"cross_entropy\"\r\n",
     "\r\n",
+    "print(x_train.shape)\r\n",
     "print(y_train.shape)\r\n",
     "\r\n",
     "parameters = initialize_parameters(layers_dims)\r\n",
     "\r\n",
-    "cache = forward_propagation(x_train_flatten, parameters, activation)\r\n",
+    "cache = forward_propagation(x_train, parameters, activation)\r\n",
     "\r\n",
     "cost = compute_cost(cache['A' + str(len(parameters) // 2)].T, y_train, loss_funtion)\r\n",
     "\r\n",
-    "print(\"cost:\",cost)"
+    "grads = back_propagation(X, Y, parameters, cache, activation)\r\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "(784, 60000)\n",
       "(1, 60000)\n",
       "activation: relu\n",
       "activation: relu\n",
-      "activation: sigmoid\n",
-      "cost: 3533.9805322670554\n"
+      "activation: sigmoid\n"
      ]
     }
    ],
@@ -305,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 577,
    "source": [
     "layers_dims = [5,5,2,4] # 3NN\r\n",
     "activation = [\"relu\",\"relu\",\"sigmoid\"] # 3 Activation to 3NN\r\n",
@@ -315,71 +343,53 @@
     "Y = np.array([[0]])\r\n",
     "\r\n",
     "parameters = initialize_parameters(layers_dims)\r\n",
-    "\r\n",
+    "print(parameters[\"W2\"])\r\n",
     "cache = forward_propagation(X, parameters, activation)\r\n",
     "\r\n",
     "cost = compute_cost(cache['A' + str(len(parameters) // 2)].T, Y, loss_funtion)\r\n",
     "\r\n",
-    "grads = back_propagation(X, Y, parameters, cache, activation)\r\n"
+    "grads = back_propagation(X, Y, parameters, cache, activation)\r\n",
+    "print(grads[\"dW2\"])\r\n",
+    "\r\n",
+    "parameters = update_parameters(grads, parameters, 0.001)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "[[ 0.57742675 -0.59769984  1.11824805  0.23708674 -0.01536359]\n",
+      " [-0.02516844  1.15235442  0.15337983  0.50607395 -0.78170848]]\n",
       "activation: relu\n",
       "activation: relu\n",
       "activation: sigmoid\n",
-      "{'dZ3': array([[0.99999639],\n",
-      "       [0.00264643],\n",
-      "       [0.99988382],\n",
-      "       [0.89480874]]), 'dW3': array([[6.36704218e+00, 1.71243669e+00],\n",
-      "       [1.68500175e-02, 4.53186697e-03],\n",
-      "       [6.36632543e+00, 1.71224392e+00],\n",
-      "       [5.69730556e+00, 1.53230885e+00]]), 'db3': array([[0.99999639],\n",
-      "       [0.00264643],\n",
-      "       [0.99988382],\n",
-      "       [0.89480874]]), 'dZ2': array([[3.19799271],\n",
-      "       [0.13538042]]), 'dW2': array([[ 1.12774193,  0.04774063],\n",
-      "       [ 0.84411792,  0.03573399],\n",
-      "       [29.74536824,  1.25920875],\n",
-      "       [ 0.        ,  0.        ],\n",
-      "       [ 0.        ,  0.        ]]), 'db2': array([[3.19799271],\n",
-      "       [0.13538042]]), 'dZ1': array([[ 0.83642885],\n",
-      "       [-1.90891761],\n",
-      "       [ 1.87815273],\n",
-      "       [-1.39911307],\n",
-      "       [-3.53129292]]), 'dW1': array([[  4.42842239, -10.10664981,   9.94376704,  -7.40752025,\n",
-      "        -18.69621864],\n",
-      "       [ -4.24712576,   9.69289039,  -9.53667593,   7.10426137,\n",
-      "         17.93080808],\n",
-      "       [ -2.99136335,   6.82695985,  -6.71693386,   5.00371975,\n",
-      "         12.62914382],\n",
-      "       [ -9.96900574,  22.75149956, -22.38482738,  16.67537678,\n",
-      "         42.08783505],\n",
-      "       [  4.88813538, -11.15581764,  10.97602606,  -8.17649236,\n",
-      "        -20.63706664]]), 'db1': array([[ 0.83642885],\n",
-      "       [-1.90891761],\n",
-      "       [ 1.87815273],\n",
-      "       [-1.39911307],\n",
-      "       [-3.53129292]])}\n"
+      "[[ 0.          0.          0.          4.13833548  0.        ]\n",
+      " [ 0.          0.          0.         31.75426756  0.        ]]\n",
+      "[[ 0.29722749  1.08038841 -0.25435054  0.83123362  0.22690344]\n",
+      " [-0.05232553 -0.23189912  0.38667804  0.18182038  0.23919796]\n",
+      " [-0.2437045  -0.46232292  0.99716126 -1.00560379  0.38454745]\n",
+      " [ 1.59772024 -0.39446829 -0.93750842 -0.03542409 -0.1584253 ]\n",
+      " [-0.59184915  1.12749146  0.68131458 -0.26573462  0.74148287]]\n",
+      "[[  0.14980868  -1.22272859  -0.57664778   1.22950932  -1.72574596]\n",
+      " [  3.21386999 -26.23139495 -12.37091843  26.37686299 -37.02270826]\n",
+      " [  0.89469497  -7.30244138  -3.44388496   7.34293758 -10.3065871 ]\n",
+      " [  1.60616334 -13.10939934  -6.18248897  13.18209843 -18.50246501]\n",
+      " [ -2.3441957   19.13317076   9.02334379 -19.23927511  27.0043511 ]]\n",
+      "[[ 0.57742675 -0.59769984  1.11824805  0.23708674 -0.01536359]\n",
+      " [-0.02516844  1.15235442  0.15337983  0.50607395 -0.78170848]]\n",
+      "[[ 0.          0.          0.          4.13833548  0.        ]\n",
+      " [ 0.          0.          0.         31.75426756  0.        ]]\n",
+      "[[-0.25215766  2.02287897]\n",
+      " [-1.35217332 -0.41534045]\n",
+      " [ 0.53360724 -0.06435989]\n",
+      " [-1.308618   -0.40556104]]\n",
+      "[[4.83810748e+00 9.19263984e+00]\n",
+      " [4.16511034e-04 7.91391251e-04]\n",
+      " [4.60646306e+00 8.75250416e+00]\n",
+      " [5.62564980e-04 1.06890086e-03]]\n"
      ]
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   },
   {
